--- a/index.html
+++ b/index.html
@@ -28,24 +28,32 @@
         <div class="menu-container">
           <div class="nav-container">
             <nav class="site-nav">
-              <ul>
-                <li><a href="#" class="primary">Про нас</a></li>
-                <li><a href="#">Чому ми</a></li>
-                <li><a href="#">Наші процедури</a></li>
-                <li><a href="#">Контакти</a></li>
+              <ul class="site-nav__list">
+                <li class="site-nav__item"><a href="#" class="site-nav__link site-nav__link--current">Про нас</a></li>
+                <li class="site-nav__item"><a href="#" class="site-nav__link">Чому ми</a></li>
+                <li class="site-nav__item"><a href="#" class="site-nav__link">Наші процедури</a></li>
+                <li class="site-nav__item"><a href="#" class="site-nav__link">Контакти</a></li>
               </ul>
             </nav>
           </div>
           <div class="socials">
-            <a href="#">
-              <img src="./images/telephone-receiver_icon-icons.com_56033.svg" alt="" />
-            </a>
-            <a href="#">
-              <img src="./images/uit_facebook-f.svg" alt="" />
-            </a>
-            <a href="#">
-              <img src="./images/ph_instagram-logo-light.svg" alt="" />
-            </a>
+            <ul class="socials__list">
+              <li class="socials__item">
+                <a href="#" class="socials__link">
+                  <img src="./images/telephone-receiver_icon-icons.com_56033.svg" alt="" />
+                </a>
+              </li>
+              <li class="socials__item">
+                <a href="#" class="socials__link">
+                  <img src="./images/uit_facebook-f.svg" alt="" />
+                </a>
+              </li>
+              <li class="socials__item">
+                <a href="#" class="socials__link">
+                  <img src="./images/ph_instagram-logo-light.svg" alt="" />
+                </a>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
@@ -56,12 +64,9 @@
           <p class="hero__sub-title">Косметологічна клініка</p>
           <h1 class="hero__title" lang="en">Beauty<br />Zone</h1>
           <div class="hero__btn-block">
-            <button type="button" class="hero__button button">Замовити дзвінок</button>
+            <button type="button" class="hero__button">Замовити дзвінок</button>
           </div>
-          <p class="hero__text">
-            Запишись та отримай безкоштовну<br />
-            консультацію нашого косметолога
-          </p>
+          <p class="hero__text">Запишись та отримай безкоштовну консультацію нашого косметолога</p>
         </div>
       </section>
       <section class="features">
@@ -69,7 +74,7 @@
           <div class="features-info">
             <h2 class="section-title">
               Перевтілюйтесь в
-              <span class="accent" lang="en">beauty zone!</span>
+              <span lang="en">beauty zone!</span>
             </h2>
             <p class="features-text">
               Наша косметологічна клініка пропонує вам професійні послуги з догляду за шкірою обличчя та тіла.
@@ -81,17 +86,17 @@
             </p>
           </div>
           <div class="features_image">
-            <img src="./images/features1.png" alt="some txt" />
-            <img src="./images/features2.png" alt="some txt" />
+            <div class="features_image__item"><img src="./images/features1.png" alt="some txt" /></div>
+            <div class="features_image__item"><img src="./images/features2.png" alt="some txt" /></div>
           </div>
         </div>
       </section>
       <section class="our-jobs">
+        <h2 class="section-title">
+          Чому люди<br />
+          <span class="accent">обирають нас</span>
+        </h2>
         <div class="container">
-          <h2 class="section-title">
-            Чому люди
-            <span class="accent">обирають нас</span>
-          </h2>
           <div class="our-jobs__item">
             <img src="./images/game-icons_materials-science.svg" alt="" />
             <p class="our-jobs__text">Всі наші косметологи мають вищу медичну освіту та стаж роботи від 5 років</p>
@@ -107,64 +112,63 @@
         </div>
       </section>
       <section class="our-procedures">
+        <h2 class="section-title">
+          Наші
+          <span class="accent">процедури</span>
+        </h2>
         <div class="container">
-          <h2 class="section-title">
-            Наші
-            <span class="accent">процедури</span>
-          </h2>
           <div class="slider-container">
             <div class="slider-container__arrow">
               <img src="./images/Arrow_back.png" alt="Arrow_back" class="arrow-back" />
             </div>
-            <div class="slider-content">
-              <div class="slider-img-block">
+            <div class="content-wraper">
+              <div class="slider-content">
                 <img src="./images/procedures1.png" alt="" />
-              </div>
-              <div class="slider-text-wrapper">
                 <p class="slider-content-text">Маски для обличчя</p>
               </div>
-            </div>
-            <div class="slider-content">
-              <div class="slider-img-block">
+              <div class="slider-content">
                 <img src="./images/procedures2.png" alt="" />
-              </div>
-              <div class="slider-text-wrapper">
                 <p class="slider-content-text">Маски для обличчя</p>
               </div>
-            </div>
-            <div class="slider-content">
-              <div class="slider-img-block">
+              <div class="slider-content">
                 <img src="./images/procedures3.png" alt="" />
-              </div>
-              <div class="slider-text-wrapper">
                 <p class="slider-content-text">Маски для обличчя</p>
               </div>
             </div>
             <div class="slider-container__arrow">
               <img src="./images/Arrow_next.png" alt="Arrow_next" class="arrow-next" />
             </div>
-            <ul class="slider-dots">
-              <li class="slider-dots-item">
-                <img src="./images/Ellipse_default.svg" alt="dot" />
-              </li>
-              <li class="slider-dots-item">
-                <img src="./images/Ellipse_default.svg" alt="dot" />
-              </li>
-              <li class="slider-dots-item">
-                <img src="./images/Ellipse_default.svg" alt="dot" />
-              </li>
-            </ul>
           </div>
+          <ul class="slider-dots">
+            <li class="slider-dots-item">
+              <img src="./images/Ellipse_default.svg" alt="dot" />
+            </li>
+            <li class="slider-dots-item">
+              <img src="./images/Ellipse_default.svg" alt="dot" />
+            </li>
+            <li class="slider-dots-item">
+              <img src="./images/Ellipse_default.svg" alt="dot" />
+            </li>
+          </ul>
         </div>
       </section>
       <section class="find-us">
+        <h2 class="section-title">
+          Як нас
+          <span class="accent">знайти</span>
+        </h2>
         <div class="container">
-          <h2 class="section-title">
-            Як нас
-            <span class="accent">знайти</span>
-          </h2>
           <div class="map-container">
-            <img src="./images/map.png" alt="map" />
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.9400613933917!2d30.5181289!3d50.4422171!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cef8b5f6338d%3A0x25c7f06ad686451c!2z0LHRg9C7LiDQotCw0YDQsNGB0LAg0KjQtdCy0YfQtdC90LrQviwgNSwg0JrQuNC10LIsIDAyMDAw!5e0!3m2!1sru!2sua!4v1744390468711!5m2!1sru!2sua"
+              class="map_frame"
+              width="605"
+              height="481"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
           </div>
           <div class="form-container">
             <form action="" class="form">
@@ -196,8 +200,11 @@
                 />
               </div>
               <button type="submit" class="form__btn-submit">Записатись безкоштовно</button>
+              <p class="copyrights">
+                Натискаючи на кнопку я погоджуюсь
+                <a href="#"> з політикою конфіденційності </a>
+              </p>
             </form>
-            <p class="copyrights">Натискаючи на кнопку я погоджуюсь з політикою конфіденційності</p>
           </div>
         </div>
       </section>
@@ -209,12 +216,12 @@
             <img src="./images/logo.svg" alt="logo" />
           </a>
         </div>
-        <div class="fotter-nav">
-          <ul>
-            <li><a href="#">Про нас</a></li>
-            <li><a href="#">Чому ми</a></li>
-            <li><a href="#">Наші процедури</a></li>
-            <li><a href="#">Контакти</a></li>
+        <div class="footer-nav">
+          <ul class="footer-nav__list">
+            <li class="footer-nav__item"><a href="#" class="footer-nav__link">Про нас</a></li>
+            <li class="footer-nav__item"><a href="#" class="footer-nav__link">Чому ми</a></li>
+            <li class="footer-nav__item"><a href="#" class="footer-nav__link">Наші процедури</a></li>
+            <li class="footer-nav__item"><a href="#" class="footer-nav__link">Контакти</a></li>
           </ul>
         </div>
         <div class="contacts">
@@ -232,15 +239,23 @@
             </ul>
           </address>
           <div class="socials">
-            <a href="#" class="socials__link">
-              <img src="./images/telephone-receiver_icon-icons.com_56033.svg" alt="" />
-            </a>
-            <a href="#" class="socials__link">
-              <img src="./images/uit_facebook-f.svg" alt="" />
-            </a>
-            <a href="#" class="socials__link">
-              <img src="./images/ph_instagram-logo-light.svg" alt="" />
-            </a>
+            <ul class="socials__list">
+              <li class="socials__item">
+                <a href="#" class="socials__link">
+                  <img src="./images/telephone-receiver_icon-icons.com_56033.svg" alt="" />
+                </a>
+              </li>
+              <li class="socials__item">
+                <a href="#" class="socials__link">
+                  <img src="./images/uit_facebook-f.svg" alt="" />
+                </a>
+              </li>
+              <li class="socials__item">
+                <a href="#" class="socials__link">
+                  <img src="./images/ph_instagram-logo-light.svg" alt="" />
+                </a>
+              </li>
+            </ul>
           </div>
         </div>
         <div class="copy">
