--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
           <div class="nav-container">
             <nav class="site-nav">
               <ul class="site-nav__list">
-                <li class="site-nav__item"><a href="#" class="site-nav__link site-nav__link--current">Про нас</a></li>
-                <li class="site-nav__item"><a href="#" class="site-nav__link">Чому ми</a></li>
-                <li class="site-nav__item"><a href="#" class="site-nav__link">Наші процедури</a></li>
-                <li class="site-nav__item"><a href="#" class="site-nav__link">Контакти</a></li>
+                <li class="site-nav__item">
+                  <a href="#features" class="site-nav__link site-nav__link--current">Про нас</a>
+                </li>
+                <li class="site-nav__item"><a href="#our-jobs" class="site-nav__link">Чому ми</a></li>
+                <li class="site-nav__item"><a href="#our-procedures" class="site-nav__link">Наші процедури</a></li>
+                <li class="site-nav__item"><a href="#find-us" class="site-nav__link">Контакти</a></li>
               </ul>
             </nav>
           </div>
@@ -69,7 +71,7 @@
           <p class="hero__text">Запишись та отримай безкоштовну консультацію нашого косметолога</p>
         </div>
       </section>
-      <section class="features">
+      <section class="features" id="features">
         <div class="container">
           <div class="features-info">
             <h2 class="section-title">
@@ -91,7 +93,7 @@
           </div>
         </div>
       </section>
-      <section class="our-jobs">
+      <section class="our-jobs" id="our-jobs">
         <h2 class="section-title">
           Чому люди<br />
           <span class="accent">обирають нас</span>
@@ -111,7 +113,7 @@
           </div>
         </div>
       </section>
-      <section class="our-procedures">
+      <section class="our-procedures" id="our-procedures">
         <h2 class="section-title">
           Наші
           <span class="accent">процедури</span>
@@ -152,7 +154,7 @@
           </ul>
         </div>
       </section>
-      <section class="find-us">
+      <section class="find-us" id="find-us">
         <h2 class="section-title">
           Як нас
           <span class="accent">знайти</span>
@@ -218,10 +220,10 @@
         </div>
         <div class="footer-nav">
           <ul class="footer-nav__list">
-            <li class="footer-nav__item"><a href="#" class="footer-nav__link">Про нас</a></li>
-            <li class="footer-nav__item"><a href="#" class="footer-nav__link">Чому ми</a></li>
-            <li class="footer-nav__item"><a href="#" class="footer-nav__link">Наші процедури</a></li>
-            <li class="footer-nav__item"><a href="#" class="footer-nav__link">Контакти</a></li>
+            <li class="footer-nav__item"><a href="#features" class="footer-nav__link">Про нас</a></li>
+            <li class="footer-nav__item"><a href="#our-jobs" class="footer-nav__link">Чому ми</a></li>
+            <li class="footer-nav__item"><a href="#our-procedures" class="footer-nav__link">Наші процедури</a></li>
+            <li class="footer-nav__item"><a href="#find-us" class="footer-nav__link">Контакти</a></li>
           </ul>
         </div>
         <div class="contacts">
