add positio on header and bg

--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
               </li>
               <li class="socials__item">
                 <a href="#" class="socials__link">
-                  <img src="./images/uit_facebook-f.svg" alt="" />
+                  <svg class="icon icon-uit_facebook-f" width="32" height="32">
+                    <use href="./images/symbol-defs.svg#icon-uit_facebook-f"></use>
+                  </svg>
+                  <!-- <img src="./images/uit_facebook-f.svg" alt="" /> -->
                 </a>
               </li>
               <li class="socials__item">
@@ -249,7 +252,10 @@
               </li>
               <li class="socials__item">
                 <a href="#" class="socials__link">
-                  <img src="./images/uit_facebook-f.svg" alt="" />
+                  <svg class="icon icon-uit_facebook-f" width="32" height="32">
+                    <use href="./images/symbol-defs.svg#icon-uit_facebook-f"></use>
+                  </svg>
+                  <!-- <img src="./images/uit_facebook-f.svg" alt="" /> -->
                 </a>
               </li>
               <li class="socials__item">
