fix icons and hero bg

--- a/index.html
+++ b/index.html
@@ -42,12 +42,15 @@
             <ul class="socials__list">
               <li class="socials__item">
                 <a href="#" class="socials__link">
-                  <img src="./images/telephone-receiver_icon-icons.com_56033.svg" alt="" />
+                  <svg class="icon" width="32" height="32">
+                    <use href="./images/symbol-defs.svg#icon-telephone-receiver_icon-iconscom_56033"></use>
+                  </svg>
+                  <!-- <img src="./images/telephone-receiver_icon-icons.com_56033.svg" alt="" /> -->
                 </a>
               </li>
               <li class="socials__item">
                 <a href="#" class="socials__link">
-                  <svg class="icon icon-uit_facebook-f" width="32" height="32">
+                  <svg class="icon" width="32" height="32">
                     <use href="./images/symbol-defs.svg#icon-uit_facebook-f"></use>
                   </svg>
                   <!-- <img src="./images/uit_facebook-f.svg" alt="" /> -->
@@ -55,7 +58,10 @@
               </li>
               <li class="socials__item">
                 <a href="#" class="socials__link">
-                  <img src="./images/ph_instagram-logo-light.svg" alt="" />
+                  <svg class="icon" width="32" height="32">
+                    <use href="./images/symbol-defs.svg#icon-ph_instagram-logo-light"></use>
+                  </svg>
+                  <!-- <img src="./images/ph_instagram-logo-light.svg" alt="" /> -->
                 </a>
               </li>
             </ul>
@@ -247,7 +253,10 @@
             <ul class="socials__list">
               <li class="socials__item">
                 <a href="#" class="socials__link">
-                  <img src="./images/telephone-receiver_icon-icons.com_56033.svg" alt="" />
+                  <svg class="icon" width="32" height="32">
+                    <use href="./images/symbol-defs.svg#icon-telephone-receiver_icon-iconscom_56033"></use>
+                  </svg>
+                  <!-- <img src="./images/telephone-receiver_icon-icons.com_56033.svg" alt="" /> -->
                 </a>
               </li>
               <li class="socials__item">
@@ -260,7 +269,10 @@
               </li>
               <li class="socials__item">
                 <a href="#" class="socials__link">
-                  <img src="./images/ph_instagram-logo-light.svg" alt="" />
+                  <svg class="icon" width="32" height="32">
+                    <use href="./images/symbol-defs.svg#icon-ph_instagram-logo-light"></use>
+                  </svg>
+                  <!-- <img src="./images/ph_instagram-logo-light.svg" alt="" /> -->
                 </a>
               </li>
             </ul>
