add position on procuderes

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
       <div class="container">
         <div class="logo-container">
           <a href="#" class="logo-container__link">
-            <img src="./images/logo.svg" alt="logo" />
+            <svg class="icon" width="73" height="37">
+              <use href="./images/symbol-defs.svg#icon-logo"></use>
+            </svg>
+            <!-- <img src="./images/logo.svg" alt="logo" /> -->
           </a>
         </div>
         <div class="menu-container">
@@ -109,15 +112,24 @@
         </h2>
         <div class="container">
           <div class="our-jobs__item">
-            <img src="./images/game-icons_materials-science.svg" alt="" />
+            <svg class="icon" width="48" height="48">
+              <use href="./images/symbol-defs.svg#icon-game-icons_materials-science"></use>
+            </svg>
+            <!-- <img src="./images/game-icons_materials-science.svg" alt="" /> -->
             <p class="our-jobs__text">Всі наші косметологи мають вищу медичну освіту та стаж роботи від 5 років</p>
           </div>
           <div class="our-jobs__item">
-            <img src="./images/medicinecosmeticsbottletreatment_109776.svg" alt="" />
+            <svg class="icon" width="48" height="48">
+              <use href="./images/symbol-defs.svg#icon-medicinecosmeticsbottletreatment_109776"></use>
+            </svg>
+            <!-- <img src="./images/medicinecosmeticsbottletreatment_109776.svg" alt="" /> -->
             <p class="our-jobs__text">Використовуємо тільки професійне обладнання та косметику, перевірену часом</p>
           </div>
           <div class="our-jobs__item">
-            <img src="./images/ph_crown-light.svg" alt="" />
+            <svg class="icon" width="48" height="48">
+              <use href="./images/symbol-defs.svg#icon-ph_crown-light"></use>
+            </svg>
+            <!-- <img src="./images/ph_crown-light.svg" alt="" /> -->
             <p class="our-jobs__text">Наша мета - підкреслити переваги та приховати недоліки, а не переробити</p>
           </div>
         </div>
